# project_mars

./: .gitignore  CMakeLists.txt  README.md  do-docs.bash  do-tests-and-coverage.bash  log.txt  package.xml
.github/workflows/: run-unit-test-and-upload-codecov.yml
src/docs/: index.html  index.md
src/mars_exploration/: CMakeLists.txt  package.xml
src/mars_exploration/include/mars_exploration/: mars_exploration.hpp  mars_exploration_node.hpp
src/mars_exploration/launch/: mars_exploration_node_tests.launch.yaml  robot_bringup.launch.py  robot_instance.launch.py  single_robot.launch.py  single_robot_demo.launch.py  two_robot_demo.launch.py
src/mars_exploration/resource/: mars_map.pgm  mars_map.yaml  mars_map_visualization.rviz  nav2_params.yaml  robot_1_nav2_params.yaml  slam_toolbox.yaml  slam_toolbox_params.yaml  turtlebot_webots.urdf  turtlebot_webots_old.urdf
src/mars_exploration/src/: mars_exploration.cpp  mars_exploration_node.cpp  mars_exploration_node_main.cpp  scan_frame_rewriter.cpp
src/mars_exploration/test/: mars_exploration_node_tests.cpp  mars_exploration_tests.cpp
src/mars_exploration/worlds/: .mars_single_robot.wbproj  mars_single_robot.wbt  mars_two_robots.wbt
src/mars_fleet_bringup/: CMakeLists.txt  package.xml
src/mars_fleet_bringup/config/: mars_config.rviz
src/mars_fleet_bringup/launch/: mars_fleet_bringup.launch.py  robot_instance.launch.py  two_robot_fleet.launch.py
src/mars_fleet_bringup/params/: robot_1_nav2_params.yaml  robot_2_nav2_params.yaml  robot_3_nav2_params.yaml  ros2_control_params.yaml  slam_toolbox_params.yaml
src/mars_fleet_bringup/resource/: turtlebot_webots.urdf
src/mars_fleet_bringup/scripts/: generate_coverage_report.bash
src/mars_fleet_bringup/test/: test_robot_namespace_topics.cpp  test_slam_map_topic.cpp
src/mars_fleet_bringup/urdf/: turtlebot_webots.urdf
src/mars_fleet_bringup/worlds/: mars_1_robots.wbt  mars_2_robots.wbt  mars_3_robots.wbt  mars_two_robot.wbt  mars_two_robots.wbt
src/mars_overseer/: CMakeLists.txt  package.xml
src/mars_overseer/cmake-modules/: CodeCoverage.cmake
src/mars_overseer/include/mars_overseer/: map_merger.hpp  overseer.hpp
src/mars_overseer/launch/: integration_tests.launch.py  integration_tests.launch.yaml
src/mars_overseer/src/: map_merger.cpp  overseer.cpp
src/mars_overseer/test/: overseer_integration_tests.cpp  overseer_unit_tests.cpp  test_build_passes.cpp
