<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mars_overseer</name>
  <version>0.0.0</version>
  <description>
    Central overseer node for Project MARS. Subscribes to per-robot maps and
    publishes a fused global occupancy grid.
  </description>
  <maintainer email="mhurt@umd.edu">Marcus Hurt</maintainer>
  <maintainer email="ggilbert@umd.edu">Grayson Gilbert</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
